Fix typos in readme and Python notebook
Original PRs:
https://github.com/deepmind/neural-processes/pull/1
https://github.com/deepmind/neural-processes/pull/7

--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -712,7 +712,7 @@
         "    y)\u003csub\u003eT\u003c/sub\u003e**. We will predict the mean and variance at the target points\n",
         "    given the context and use the log likelihood of the ground truth targets as\n",
         "    our loss to update the model.\n",
-        "*   **`MAX_CONTEXT_POINTS`** - a scalar that sets the maximum number of contest\n",
+        "*   **`MAX_CONTEXT_POINTS`** - a scalar that sets the maximum number of context\n",
         "    points used during training. The number of context points will then be a\n",
         "    value between 3 and `MAX_CONTEXT_POINTS` that is sampled at random for every\n",
         "    iteration.\n",
