Migrate deprecated tf.reset_default_graph

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -1016,7 +1016,7 @@
         "ATTENTION_TYPE = 'uniform' #@param ['uniform','laplace','dot_product','multihead']\n",
         "random_kernel_parameters=True #@param {type:\"boolean\"}\n",
         "\n",
-        "tf.reset_default_graph()\n",
+        "tf.compat.v1.reset_default_graph\n",
         "# Train dataset\n",
         "dataset_train = GPCurvesReader(\n",
         "    batch_size=16, max_num_context=MAX_CONTEXT_POINTS, random_kernel_parameters=random_kernel_parameters)\n",
@@ -1320,7 +1320,7 @@
         "ATTENTION_TYPE = 'multihead' #@param ['uniform','laplace','dot_product','multihead']\n",
         "random_kernel_parameters=True #@param {type:\"boolean\"}\n",
         "\n",
-        "tf.reset_default_graph()\n",
+        "tf.compat.v1.reset_default_graph\n",
         "# Train dataset\n",
         "dataset_train = GPCurvesReader(\n",
         "    batch_size=16, max_num_context=MAX_CONTEXT_POINTS)\n",
