--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -733,7 +733,7 @@
         "TRAINING_ITERATIONS = int(2e5)\n",
         "MAX_CONTEXT_POINTS = 10\n",
         "PLOT_AFTER = int(2e4)\n",
-        "tf.reset_default_graph()"
+        "tf.compat.v1.reset_default_graph"
       ]
     },
     {
