Migrate deprecated tf.random_uniform by tf.random.uniform

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -189,7 +189,7 @@
         "    Returns:\n",
         "      A `NPRegressionDescription` namedtuple.\n",
         "    \"\"\"\n",
-        "    num_context = tf.random_uniform(\n",
+        "    num_context = tf.random.uniform(\n",
         "        shape=[], minval=3, maxval=self._max_num_context, dtype=tf.int32)\n",
         "\n",
         "    # If we are testing we want to have more targets and have them evenly\n",
@@ -204,19 +204,19 @@
         "    # During training the number of target points and their x-positions are\n",
         "    # selected at random\n",
         "    else:\n",
-        "      num_target = tf.random_uniform(shape=(), minval=0, \n",
+        "      num_target = tf.random.uniform(shape=(), minval=0, \n",
         "                                     maxval=self._max_num_context - num_context,\n",
         "                                     dtype=tf.int32)\n",
         "      num_total_points = num_context + num_target\n",
-        "      x_values = tf.random_uniform(\n",
+        "      x_values = tf.random.uniform(\n",
         "          [self._batch_size, num_total_points, self._x_size], -2, 2)\n",
         "\n",
         "    # Set kernel parameters\n",
         "    # Either choose a set of random parameters for the mini-batch\n",
         "    if self._random_kernel_parameters:\n",
-        "      l1 = tf.random_uniform([self._batch_size, self._y_size,\n",
+        "      l1 = tf.random.uniform([self._batch_size, self._y_size,\n",
         "                              self._x_size], 0.1, self._l1_scale)\n",
-        "      sigma_f = tf.random_uniform([self._batch_size, self._y_size],\n",
+        "      sigma_f = tf.random.uniform([self._batch_size, self._y_size],\n",
         "                                  0.1, self._sigma_scale)\n",
         "    # Or use the same fixed parameters for all mini-batches\n",
         "    else:\n",
