--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -256,7 +256,7 @@
         "    Returns:\n",
         "      A `CNPRegressionDescription` namedtuple.\n",
         "    \"\"\"\n",
-        "    num_context = tf.random_uniform(\n",
+        "    num_context = tf.random.uniform(\n",
         "        shape=[], minval=3, maxval=self._max_num_context, dtype=tf.int32)\n",
         "\n",
         "    # If we are testing we want to have more targets and have them evenly\n",
@@ -271,10 +271,10 @@
         "    # During training the number of target points and their x-positions are\n",
         "    # selected at random\n",
         "    else:\n",
-        "      num_target = tf.random_uniform(\n",
+        "      num_target = tf.random.uniform(\n",
         "          shape=(), minval=2, maxval=self._max_num_context, dtype=tf.int32)\n",
         "      num_total_points = num_context + num_target\n",
-        "      x_values = tf.random_uniform(\n",
+        "      x_values = tf.random.uniform(\n",
         "          [self._batch_size, num_total_points, self._x_size], -2, 2)\n",
         "\n",
         "    # Set kernel parameters\n",
