Migrate deprecated tf.cholesky by tf.linalg.cholesky

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -230,7 +230,7 @@
         "    kernel = self._gaussian_kernel(x_values, l1, sigma_f)\n",
         "\n",
         "    # Calculate Cholesky, using double precision for better stability:\n",
-        "    cholesky = tf.cast(tf.cholesky(tf.cast(kernel, tf.float64)), tf.float32)\n",
+        "    cholesky = tf.cast(tf.linalg.cholesky(tf.cast(kernel, tf.float64)), tf.float32)\n",
         "\n",
         "    # Sample a curve\n",
         "    # [batch_size, y_size, num_total_points, 1]\n",
