Migrate deprecated tf.random_normal by tf.random.normal

--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -295,7 +295,7 @@
         "    # [batch_size, y_size, num_total_points, 1]\n",
         "    y_values = tf.matmul(\n",
         "        cholesky,\n",
-        "        tf.random_normal([self._batch_size, self._y_size, num_total_points, 1]))\n",
+        "        tf.random.normal([self._batch_size, self._y_size, num_total_points, 1]))\n",
         "\n",
         "    # [batch_size, num_total_points, y_size]\n",
         "    y_values = tf.transpose(tf.squeeze(y_values, 3), [0, 2, 1])\n",
