Migrate deprecated tf.random_shuffle by tf.random.shuffle

--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -306,7 +306,7 @@
         "      target_y = y_values\n",
         "\n",
         "      # Select the observations\n",
-        "      idx = tf.random_shuffle(tf.range(num_target))\n",
+        "      idx = tf.random.shuffle(tf.range(num_target))\n",
         "      context_x = tf.gather(x_values, idx[:num_context], axis=1)\n",
         "      context_y = tf.gather(y_values, idx[:num_context], axis=1)\n",
         "\n",
