Migrate deprecated tf.variable_scope by tf.compat.v1.variable_scope

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -336,7 +336,7 @@
         "  output.set_shape((None, filter_size))\n",
         "\n",
         "  # Pass through MLP\n",
-        "  with tf.variable_scope(variable_scope, reuse=tf.AUTO_REUSE):\n",
+        "  with tf.compat.v1.variable_scope(variable_scope, reuse=tf.AUTO_REUSE):\n",
         "    for i, size in enumerate(output_sizes[:-1]):\n",
         "      output = tf.nn.relu(\n",
         "          tf.layers.dense(output, size, name=\"layer_{}\".format(i)))\n",
@@ -408,7 +408,7 @@
         "                       \"deterministic_encoder\")\n",
         "\n",
         "    # Apply attention\n",
-        "    with tf.variable_scope(\"deterministic_encoder\", reuse=tf.AUTO_REUSE):\n",
+        "    with tf.compat.v1.variable_scope(\"deterministic_encoder\", reuse=tf.AUTO_REUSE):\n",
         "        hidden = self._attention(context_x, target_x, hidden)\n",
         "\n",
         "    return hidden\n"
@@ -472,7 +472,7 @@
         "    hidden = tf.reduce_mean(hidden, axis=1)\n",
         "    \n",
         "    # Have further MLP layers that map to the parameters of the Gaussian latent\n",
-        "    with tf.variable_scope(\"latent_encoder\", reuse=tf.AUTO_REUSE):\n",
+        "    with tf.compat.v1.variable_scope(\"latent_encoder\", reuse=tf.AUTO_REUSE):\n",
         "      # First apply intermediate relu layer \n",
         "      hidden = tf.nn.relu(\n",
         "          tf.layers.dense(hidden, \n",
