--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -429,7 +429,7 @@
         "    hidden.set_shape((None, filter_size))\n",
         "\n",
         "    # Pass through MLP\n",
-        "    with tf.variable_scope(\"encoder\", reuse=tf.AUTO_REUSE):\n",
+        "    with tf.compat.v1.variable_scope(\"encoder\", reuse=tf.AUTO_REUSE):\n",
         "      for i, size in enumerate(self._output_sizes[:-1]):\n",
         "        hidden = tf.nn.relu(\n",
         "            tf.layers.dense(hidden, size, name=\"Encoder_layer_{}\".format(i)))\n",
@@ -518,7 +518,7 @@
         "    hidden.set_shape((None, filter_size))\n",
         "\n",
         "    # Pass through MLP\n",
-        "    with tf.variable_scope(\"decoder\", reuse=tf.AUTO_REUSE):\n",
+        "    with tf.compat.v1.variable_scope(\"decoder\", reuse=tf.AUTO_REUSE):\n",
         "      for i, size in enumerate(self._output_sizes[:-1]):\n",
         "        hidden = tf.nn.relu(\n",
         "            tf.layers.dense(hidden, size, name=\"Decoder_layer_{}\".format(i)))\n",
