Migrate deprecated tf.layers to tf.compat.v1.layers

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -339,10 +339,10 @@
         "  with tf.compat.v1.variable_scope(variable_scope, reuse=tf.compat.v1.AUTO_REUSE):\n",
         "    for i, size in enumerate(output_sizes[:-1]):\n",
         "      output = tf.nn.relu(\n",
-        "          tf.layers.dense(output, size, name=\"layer_{}\".format(i)))\n",
+        "          tf.compat.v1.layers.dense(output, size, name=\"layer_{}\".format(i)))\n",
         "\n",
         "    # Last layer without a ReLu\n",
-        "    output = tf.layers.dense(\n",
+        "    output = tf.compat.v1.layers.dense(\n",
         "        output, output_sizes[-1], name=\"layer_{}\".format(i + 1))\n",
         "\n",
         "  # Bring back into original shape\n",
@@ -475,12 +475,12 @@
         "    with tf.compat.v1.variable_scope(\"latent_encoder\", reuse=tf.compat.v1.AUTO_REUSE):\n",
         "      # First apply intermediate relu layer \n",
         "      hidden = tf.nn.relu(\n",
-        "          tf.layers.dense(hidden, \n",
+        "          tf.compat.v1.layers.dense(hidden, \n",
         "                          (self._output_sizes[-1] + self._num_latents)/2, \n",
         "                          name=\"penultimate_layer\"))\n",
         "      # Then apply further linear layers to output latent mu and log sigma\n",
-        "      mu = tf.layers.dense(hidden, self._num_latents, name=\"mean_layer\")\n",
-        "      log_sigma = tf.layers.dense(hidden, self._num_latents, name=\"std_layer\")\n",
+        "      mu = tf.compat.v1.layers.dense(hidden, self._num_latents, name=\"mean_layer\")\n",
+        "      log_sigma = tf.compat.v1.layers.dense(hidden, self._num_latents, name=\"std_layer\")\n",
         "      \n",
         "    # Compute sigma\n",
         "    sigma = 0.1 + 0.9 * tf.sigmoid(log_sigma)\n",
@@ -807,14 +807,14 @@
         "  rep = tf.constant(0.0)\n",
         "  for h in range(num_heads):\n",
         "    o = dot_product_attention(\n",
-        "        tf.layers.Conv1D(head_size, 1, kernel_initializer=key_initializer,\n",
+        "        tf.compat.v1.layers.Conv1D(head_size, 1, kernel_initializer=key_initializer,\n",
         "                   name='wq%d' % h, use_bias=False, padding='VALID')(q),\n",
-        "        tf.layers.Conv1D(head_size, 1, kernel_initializer=key_initializer,\n",
+        "        tf.compat.v1.layers.Conv1D(head_size, 1, kernel_initializer=key_initializer,\n",
         "                   name='wk%d' % h, use_bias=False, padding='VALID')(k),\n",
-        "        tf.layers.Conv1D(head_size, 1, kernel_initializer=key_initializer,\n",
+        "        tf.compat.v1.layers.Conv1D(head_size, 1, kernel_initializer=key_initializer,\n",
         "                   name='wv%d' % h, use_bias=False, padding='VALID')(v),\n",
         "        normalise=True)\n",
-        "    rep += tf.layers.Conv1D(d_v, 1, kernel_initializer=value_initializer,\n",
+        "    rep += tf.compat.v1.layers.Conv1D(d_v, 1, kernel_initializer=value_initializer,\n",
         "                      name='wo%d' % h, use_bias=False, padding='VALID')(o)\n",
         "  return rep\n",
         "\n",
