Migrate deprecated tf.contrib.distributions to tfp.distributions

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -61,6 +61,7 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
+        "import tensorflow_probability as tfp\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import collections"
@@ -485,7 +486,7 @@
         "    # Compute sigma\n",
         "    sigma = 0.1 + 0.9 * tf.sigmoid(log_sigma)\n",
         "\n",
-        "    return tf.contrib.distributions.Normal(loc=mu, scale=sigma)\n"
+        "    return tfp.distributions.Normal(loc=mu, scale=sigma)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -552,7 +553,7 @@
         "    sigma = 0.1 + 0.9 * tf.nn.softplus(log_sigma)\n",
         "\n",
         "    # Get the distribution\n",
-        "    dist = tf.contrib.distributions.MultivariateNormalDiag(\n",
+        "    dist = tfp.distributions.MultivariateNormalDiag(\n",
         "        loc=mu, scale_diag=sigma)\n",
         "\n",
         "    return dist, mu, sigma"
@@ -666,7 +667,7 @@
         "      log_p = dist.log_prob(target_y)\n",
         "      posterior = self._latent_encoder(target_x, target_y)\n",
         "      kl = tf.reduce_sum(\n",
-        "          tf.contrib.distributions.kl_divergence(posterior, prior), \n",
+        "          tfp.distributions.kl_divergence(posterior, prior), \n",
         "          axis=-1, keepdims=True)\n",
         "      kl = tf.tile(kl, [1, num_targets])\n",
         "      loss = - tf.reduce_mean(log_p - kl / tf.cast(num_targets, tf.float32))\n",
