--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -537,7 +537,7 @@
         "    sigma = 0.1 + 0.9 * tf.nn.softplus(log_sigma)\n",
         "\n",
         "    # Get the distribution\n",
-        "    dist = tf.contrib.distributions.MultivariateNormalDiag(\n",
+        "    dist = tfp.distributions.MultivariateNormalDiag(\n",
         "        loc=mu, scale_diag=sigma)\n",
         "\n",
         "    return dist, mu, sigma"
