Migrate deprecated tf.train.AdamOptimizer to tf.compat.v1.train.AdamOptimizer

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -1062,7 +1062,7 @@
         "mu, sigma, _, _, _ = model(data_test.query, data_test.num_total_points)\n",
         "\n",
         "# Set up the optimizer and train step\n",
-        "optimizer = tf.train.AdamOptimizer(1e-4)\n",
+        "optimizer = tf.compat.v1.train.AdamOptimizer(1e-4)\n",
         "train_step = optimizer.minimize(loss)\n",
         "init = tf.initialize_all_variables()\n",
         "\n",
@@ -1365,7 +1365,7 @@
         "mu, sigma, _, _, _ = model(data_test.query, data_test.num_total_points)\n",
         "\n",
         "# Set up the optimizer and train step\n",
-        "optimizer = tf.train.AdamOptimizer(1e-4)\n",
+        "optimizer = tf.compat.v1.train.AdamOptimizer(1e-4)\n",
         "train_step = optimizer.minimize(loss)\n",
         "init = tf.initialize_all_variables()\n",
         "\n",
