--- a/conditional_neural_process.ipynb
+++ b/conditional_neural_process.ipynb
@@ -812,7 +812,7 @@
         "                     data_test.num_context_points)\n",
         "\n",
         "# Set up the optimizer and train step\n",
-        "optimizer = tf.train.AdamOptimizer(1e-4)\n",
+        "optimizer = tf.compat.v1.train.AdamOptimizer(1e-4)\n",
         "train_step = optimizer.minimize(loss)\n",
         "init = tf.initialize_all_variables()"
       ]
