Notebook: Select TensorFlow 1.x in Google Colab

--- a/attentive_neural_process.ipynb
+++ b/attentive_neural_process.ipynb
@@ -53,6 +53,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Select TensorFlow version\n",
+        "# Source: https://colab.research.google.com/notebooks/tensorflow_version.ipynb\n",
+        "%tensorflow_version 1.x"
+      ]
+    },
+    {
       "metadata": {
         "id": "Ncb7M0FpNfix",
         "colab_type": "code",
